change optimization flag

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,10 +18,10 @@ target_include_directories(lfu PRIVATE cache)
 target_include_directories(pca PRIVATE cache)
 target_include_directories(both PRIVATE cache graph)
 
-if(OPTIMIZATION)
-    target_compile_definitions(lfu PRIVATE OPTIMIZATION=1)
-    target_compile_definitions(pca PRIVATE OPTIMIZATION=1)
-    target_compile_definitions(both PRIVATE OPTIMIZATION=1)
+if(NO_OPTIMIZATION)
+    target_compile_definitions(lfu PRIVATE NO_OPTIMIZATION=1)
+    target_compile_definitions(pca PRIVATE NO_OPTIMIZATION=1)
+    target_compile_definitions(both PRIVATE NO_OPTIMIZATION=1)
 endif()
 
 if(TEST)
