fix bugs and optimiz

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,3 +29,11 @@ if(TEST)
     target_compile_definitions(pca PRIVATE TEST=1)
     target_compile_definitions(both PRIVATE TEST=1)
 endif()
+
+set(CMAKE_BUILD_TYPE Debug)
+
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+    message(STATUS "Enabling AddressSanitizer")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=address")
+endif()
