--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,24 +11,24 @@ add_compile_options(
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED true)
 
-add_executable(lfu lfu.cpp)
-add_executable(pca pca.cpp)
-add_executable(both main.cpp graph/graph.cpp)
-target_include_directories(lfu PRIVATE cache)
-target_include_directories(pca PRIVATE cache)
-target_include_directories(both PRIVATE cache graph)
+add_executable(cache main.cpp graph/graph.cpp)
+target_include_directories(cache PRIVATE cache graph)
 
 if(NO_OPTIMIZATION)
-    target_compile_definitions(lfu PRIVATE NO_OPTIMIZATION=1)
-    target_compile_definitions(pca PRIVATE NO_OPTIMIZATION=1)
-    target_compile_definitions(both PRIVATE NO_OPTIMIZATION=1)
+    target_compile_definitions(cache PRIVATE NO_OPTIMIZATION=1)
 endif()
 
+add_definitions(-DCMAKE_CURRENT_SOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
+find_package(GTest REQUIRED)
 if(TEST)
-    target_compile_definitions(lfu PRIVATE TEST=1)
-    target_compile_definitions(pca PRIVATE TEST=1)
-    target_compile_definitions(both PRIVATE TEST=1)
+    add_executable(test test/test.cpp)
+    target_include_directories(test PRIVATE ${GTEST_INCLUDE_DIRS})
+    target_link_libraries(test GTest::GTest GTest::Main)
 endif()
+
+find_package(Boost REQUIRED COMPONENTS program_options)
+include_directories(${Boost_INCLUDE_DIRS})
+target_link_libraries(cache ${Boost_LIBRARIES})
 
 set(CMAKE_BUILD_TYPE Debug)
 
